chore: added test coverage report

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "preset": "react-native",
     "setupFilesAfterEnv": [
       "@testing-library/jest-native/extend-expect"
-    ]
+    ],
+    "collectCoverage": true
   }
 }
