chore: refactored loading screen

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.13",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@testing-library/react-hooks": "^8.0.1",
+    "jest-fetch-mock": "^3.0.3",
     "json-loader": "^0.5.7",
     "react": "18.1.0",
     "react-native": "0.70.0",
