--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-loader": "^0.5.7",
     "react": "18.1.0",
     "react-native": "0.70.0",
+    "react-native-asset": "^2.0.1",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
