--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -2,6 +2,10 @@
   "migIndex": 1,
   "data": [
     {
+      "path": "src/assets/fonts/Roboto-Medium.ttf",
+      "sha1": "3c6a09fcc6a454924c81af7dff94fc6d399ed79b"
+    },
+    {
       "path": "src/assets/fonts/Roboto.ttf",
       "sha1": "56c5c0d38bde4c1f1549dda43db37b09c608aad3"
     }
