--- a/ios/woltapp/Info.plist
+++ b/ios/woltapp/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>Roboto.ttf</string>
 		<string>Roboto_medium.ttf</string>
+		<string>Roboto-Medium.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
